--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,10 @@
-body {
-  background-color: purple !important;
-}
+@import './components/auth/LoginForm.scss';
+@import './components/auth/RegisterForm.scss';
+@import './components/layout/Header.scss';
+@import './components/layout/Layout.scss';
+@import './components/posts/CreatePostForm.scss';
+@import './components/posts/PostCard.scss';
+@import './components/posts/PostFeed.scss';
+@import './components/profile/AvatarUpload.scss';
+@import './components/ui/Button.scss';
+@import './components/ui/Input.scss';
